# SALIDOCK

./: .gitignore  Readme.md  SALIDOCK_CONTEXT_RESTORE.md  SALIDOCK_Implementation_Plan.md  SALIDOCK_Visualization_Upgrade_Plan.md  SaliDock_Implementation_Plan_new.md  index.html  nohup.out  optimize_ligysis_weights.py  pyproject.toml  run_astex_diverse_benchmark.py  run_full_real_benchmark.py  run_meta_learner_opt.py  run_phase_7_analysis.py  run_real_blind_benchmark.py  run_size_adaptive_opt.py  run_unified_preprocessing_benchmark.py  salidock_pipeline_implementation_plan.md  scientific_benchmark_report.docx  scientific_benchmark_report.md  test_import.py  text.txt  wget-log.1
Frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
astex_benchmark/: astex_checkpoint.json  astex_summary.json
backend/: .dockerignore  .env  .gitignore  Dockerfile  alphafold_integration.py  app.py  cavity_bridge.py  cavity_detection.py  consensus_cavity_detection.py  docking_runner.py  docking_viz.py  download_puresnet_residues.py  environment.render.yml  generate_puresnet_residues.py  grid_calc.py  install_puresnet_residues.py  interaction_2d.py  interaction_2d_backup.py  interaction_analysis.py  migrations.sql  p2rank_integration.py  patch_puresnet_model.py  physicochemical_properties.py  puresnet_cpu.Dockerfile  render.yaml  requirements.txt  results.py  similarity_metrics.py  supabase_manager.py  surface_distance.py  test_docking_cli.py  test_req.py  tools.py  users.json  validate_cloud_only_mode.py  verify_puresnet.py
docking/: .env  (+6 more)
(+498 files in other folders)
